--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,7 @@ body {
     font-size: 1em;
     color: rgba(54, 54, 54, .98);
     -webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
+    -moz-osx-font-smoothing: grayscale;
     background-color: #FAFAFA;
 }
 
@@ -21,4 +21,18 @@ header .logo {
     padding: 1pt 12pt 1pt 12pt;
     border: solid 3px rgba(54, 54, 54, .98);
     border-radius: 1px;
+    /*    margin: 3pt;*/
+}
+
+header nav {
+    display: inline-block;
+}
+
+header nav ul {
+    list-style: none;
+    display: inline-block;
+}
+
+header nav ul li {
+    display: inline-block;
 }
