--- a/css/fonts.css
+++ b/css/fonts.css
@@ -1,4 +1,4 @@
-@import url(//fonts.googleapis.com/css?family=Open+Sans);
+@import url(//fonts.googleapis.com/css?family=Open+Sans:400,800,600,700);
 @font-face {
     font-family: 'cocogoose';
     font-weight: 400;
