--- a/css/styles.css
+++ b/css/styles.css
@@ -1,38 +1,103 @@
 html,
 body {
     width: 100%;
+    padding: 0;
+    margin: 0;
     font-family: 'Open Sans', 'Roboto', 'Helvetica-Neue', 'Helvetica', Arail, sans-serif;
     font-weight: 400;
     font-size: 1em;
     color: rgba(54, 54, 54, .98);
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    background-color: #FAFAFA;
+    background-color: #F8F8F8;
 }
 
 body {
     font-size: 12pt;
 }
 
-header .logo {
-    font-family: 'cocogoose';
-    font-size: 24pt;
-    letter-spacing: .34pt;
-    padding: 1pt 12pt 1pt 12pt;
-    border: solid 3px rgba(54, 54, 54, .98);
-    border-radius: 1px;
-    /*    margin: 3pt;*/
+header {
+    width: 100%;
+    height: 500px;
+    position: static;
+    display: block;
+    overflow: hidden;
+    z-index: 1;
+    text-align: center;
+}
+
+header .banner {
+    width: 100%;
+    height: 500px;
+    overflow: hidden;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 0;
+}
+
+header .banner img {
+    width: 100%;
+    height: auto;
+    margin-top: -5%;
+    overflow: hidden;
+    z-index: 0;
 }
 
 header nav {
+    /*    background-color: #FAFAFA;*/
+    /*    background-color: #242424;*/
     display: inline-block;
+    position: absolute;
+    left: 0;
+    width: 98%;
+    top: 400px;
+    padding: 1%;
+    z-index: 3;
+}
+
+header nav .logo {
+    font-family: 'cocogoose';
+    font-size: 46pt;
+    letter-spacing: 3px;
+    line-height: 34pt;
+    vertical-align: middle;
+    padding: 14pt 15pt 11pt 15pt;
+    border: solid 4px;
+    border-radius: 1px;
+    /*    position: fixed;*/
+    /*    top: 14pt;*/
+    /*    left: 24pt;*/
+    /*    color: #FAFAFA;*/
 }
 
 header nav ul {
+    width: 96%;
+    margin-right: 4%;
+    text-align: right;
     list-style: none;
     display: inline-block;
 }
 
 header nav ul li {
     display: inline-block;
+    margin: 0 3% 0 3%;
+    /*    color: #FAFAFA;*/
+    color: black;
+}
+
+header nav ul li a {
+    text-decoration: none;
+    font-size: 15pt;
+    font-weight: 800;
+    color: inherit;
+}
+
+.content {
+    /*    position: absolute;*/
+    position: relative;
+    background-color: #FAFAFA;
+    /*    background-color: black;*/
+    display: block;
+    z-index: 2;
 }
