--- a/css/styles.css
+++ b/css/styles.css
@@ -9,95 +9,43 @@ body {
     color: rgba(54, 54, 54, .98);
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    background-color: #F8F8F8;
+    background-color: #FEFEFE;
 }
 
 body {
     font-size: 12pt;
 }
 
-header {
+#canvas {
     width: 100%;
-    height: 500px;
-    position: static;
-    display: block;
-    overflow: hidden;
-    z-index: 1;
-    text-align: center;
+    height: 100%;
 }
 
-header .banner {
-    width: 100%;
-    height: 500px;
-    overflow: hidden;
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 0;
-}
-
-header .banner img {
-    width: 100%;
-    height: auto;
-    margin-top: -5%;
-    overflow: hidden;
-    z-index: 0;
-}
-
-header nav {
-    /*    background-color: #FAFAFA;*/
-    /*    background-color: #242424;*/
-    display: inline-block;
-    position: absolute;
-    left: 0;
-    width: 98%;
-    top: 400px;
-    padding: 1%;
-    z-index: 3;
-}
-
-header nav .logo {
+#logo {
     font-family: 'cocogoose';
-    font-size: 46pt;
+    font-size: 80pt;
     letter-spacing: 3px;
-    line-height: 34pt;
+    line-height: 70pt;
     vertical-align: middle;
-    padding: 14pt 15pt 11pt 15pt;
+    padding: 20pt 26pt 12pt 26pt;
     border: solid 4px;
     border-radius: 1px;
-    /*    position: fixed;*/
-    /*    top: 14pt;*/
-    /*    left: 24pt;*/
-    /*    color: #FAFAFA;*/
+    position: absolute;
+    top: 40%;
+    left: 40%;
+    background-color: #FEFEFE;
+    color: rgba(64, 64, 64, .9);
+    visibility: hidden;
+    /*    animation: fade-in .45s infinite;*/
 }
 
-header nav ul {
-    width: 96%;
-    margin-right: 4%;
-    text-align: right;
-    list-style: none;
-    display: inline-block;
+@keyframes fade-in {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
 }
 
-header nav ul li {
-    display: inline-block;
-    margin: 0 3% 0 3%;
-    /*    color: #FAFAFA;*/
-    color: black;
-}
-
-header nav ul li a {
-    text-decoration: none;
-    font-size: 15pt;
-    font-weight: 800;
-    color: inherit;
-}
-
-.content {
-    /*    position: absolute;*/
-    position: relative;
-    background-color: #FAFAFA;
-    /*    background-color: black;*/
-    display: block;
-    z-index: 2;
-}
+.content {}
