--- a/css/fonts.css
+++ b/css/fonts.css
@@ -1,4 +1,5 @@
 @import url(//fonts.googleapis.com/css?family=Open+Sans:400,800,600,700);
+@import url(//maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css);
 @font-face {
     font-family: 'cocogoose';
     font-weight: 400;
