--- a/css/styles.css
+++ b/css/styles.css
@@ -14,29 +14,68 @@ body {
 
 body {
     font-size: 12pt;
+    padding: 0;
+    margin: 0;
+}
+
+header {
+    width: 100%;
+    overflow: hidden;
 }
 
 #canvas {
     width: 100%;
     height: 100%;
+    padding: 0;
+    margin: 0;
+    overflow: hidden;
 }
 
 #logo {
     font-family: 'cocogoose';
-    font-size: 80pt;
+    font-size: 112pt;
     letter-spacing: 3px;
-    line-height: 70pt;
+    line-height: 100pt;
     vertical-align: middle;
-    padding: 20pt 26pt 12pt 26pt;
-    border: solid 4px;
+    padding: 24pt 30pt 12pt 30pt;
+    border: solid 8px;
     border-radius: 1px;
     position: absolute;
     top: 40%;
     left: 40%;
+    /*    background: rgba(64, 64, 64, 1);*/
+    /*    color: #FEFEFE;*/
     background-color: #FEFEFE;
     color: rgba(64, 64, 64, .9);
     visibility: hidden;
-    /*    animation: fade-in .45s infinite;*/
+}
+
+#logo a {
+    text-decoration: none;
+    color: inherit;
+}
+
+nav {
+    width: 100%;
+    background-color: #FFFFFF;
+    text-align: center;
+    border-bottom: solid 2px #545454;
+}
+
+nav ul {
+    list-style: none;
+}
+
+nav ul li {
+    display: inline-block;
+    word-spacing: 12px;
+}
+
+nav ul li a {
+    text-decoration: none;
+    margin: 0 16pt 0 16pt;
+    color: inherit;
+    font-weight: 700;
 }
 
 @keyframes fade-in {
@@ -48,4 +87,19 @@ body {
     }
 }
 
-.content {}
+.content {
+    /*    width: 96%;*/
+    /*    padding: 2%;*/
+    text-align: center;
+}
+
+.banner {
+    width: 100%;
+    max-height: 500px;
+    overflow: hidden;
+}
+
+.banner img {
+    width: 100%;
+    height: auto;
+}
