--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,7 @@ body {
     padding: 0;
     margin: 0;
     font-family: 'Open Sans', 'Roboto', 'Helvetica-Neue', 'Helvetica', Arail, sans-serif;
-    font-weight: 400;
+    font-weight: 600;
     font-size: 1em;
     color: rgba(54, 54, 54, .98);
     -webkit-font-smoothing: antialiased;
@@ -13,69 +13,9 @@ body {
 }
 
 body {
-    font-size: 12pt;
+    font-size: 14pt;
     padding: 0;
     margin: 0;
-}
-
-header {
-    width: 100%;
-    overflow: hidden;
-}
-
-#canvas {
-    width: 100%;
-    height: 100%;
-    padding: 0;
-    margin: 0;
-    overflow: hidden;
-}
-
-#logo {
-    font-family: 'cocogoose';
-    font-size: 112pt;
-    letter-spacing: 3px;
-    line-height: 100pt;
-    vertical-align: middle;
-    padding: 24pt 30pt 12pt 30pt;
-    border: solid 8px;
-    border-radius: 1px;
-    position: absolute;
-    top: 40%;
-    left: 40%;
-    /*    background: rgba(64, 64, 64, 1);*/
-    /*    color: #FEFEFE;*/
-    background-color: #FEFEFE;
-    color: rgba(64, 64, 64, .9);
-    visibility: hidden;
-}
-
-#logo a {
-    text-decoration: none;
-    color: inherit;
-}
-
-nav {
-    width: 100%;
-    background-color: #FFFFFF;
-    text-align: center;
-    border-bottom: solid 2px #545454;
-}
-
-nav ul {
-    list-style: none;
-}
-
-nav ul li {
-    display: inline-block;
-    word-spacing: 12px;
-}
-
-nav ul li a {
-    text-decoration: none;
-    margin: 0 16pt 0 16pt;
-    color: inherit;
-    font-weight: 700;
 }
 
 @keyframes fade-in {
@@ -87,19 +27,283 @@ nav ul li a {
     }
 }
 
-.content {
-    /*    width: 96%;*/
-    /*    padding: 2%;*/
+@keyframes fade-out {
+    0% {
+        opacity: 1;
+    }
+    100% {
+        opacity: 0;
+    }
+}
+
+a {
+    font-weight: 700;
+    color: inherit;
+    text-decoration: none;
+}
+
+a:active,
+a:hover {
+    text-decoration: underline !important;
+}
+
+header {
+    width: 100% !important;
+    left: 0;
+    overflow: hidden;
+}
+
+#canvas {
+    width: 100%;
+    /*    height: 100%;*/
+    padding: 0;
+    margin: 0;
+    overflow: hidden;
+}
+
+#logo {
+    font-family: 'cocogoose';
+    font-size: 300%;
+    line-height: 150%;
+    padding: 2% 3% 1% 3%;
+    border: solid 8px;
+    border-radius: 1px;
+    position: absolute;
+    top: 40%;
+    left: 40%;
+    background-color: #FEFEFE;
+    color: rgba(64, 64, 64, .9);
+    visibility: hidden;
+}
+
+#logo a {
+    text-decoration: none;
+    color: inherit;
+}
+
+#logo a:active,
+#logo a:hover {
+    text-decoration: none !important;
+}
+
+nav {
+    width: 100%;
+    background-color: #FEFEFE;
+    font-size: 16pt;
+    padding: 16pt 0 16pt 0;
     text-align: center;
+    border-bottom: solid 2px #545454;
+    top: 0;
+    left: 0;
+    z-index: 3;
+}
+
+nav #expand {
+    display: none;
+}
+
+nav ul {
+    width: 100%;
+    list-style: none;
+    list-style-position: inside;
+    text-indent: 0;
+    margin: 0;
+    padding: 0;
+}
+
+nav ul li {
+    display: inline-block;
+}
+
+nav ul li a {
+    text-decoration: none;
+    margin: 0 32pt 0 32pt;
+    color: inherit;
+    font-weight: 800;
+}
+
+#content {
+    background-color: #FEFEFE;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    z-index: 2;
 }
 
 .banner {
     width: 100%;
-    max-height: 500px;
+    height: 30%;
+    max-height: 600px;
+    margin: 0;
+    padding: 0;
     overflow: hidden;
+    text-align: center;
 }
 
 .banner img {
     width: 100%;
     height: auto;
+    margin: 0;
+    margin-top: -18%;
+    padding: 0;
+}
+
+.panel {
+    width: 100%;
+    margin: 0;
+}
+
+.panel.light {
+    background-color: #FEFEFE;
+    color: rgba(24, 24, 24, .9);
+}
+
+.panel.dark {
+    background-color: rgba(24, 24, 24, .85);
+    color: #FEFEFE;
+}
+
+.panel .padded {
+    width: 96%;
+    padding: 2%;
+}
+
+#featured {
+    padding: 16pt 0 16pt 0;
+    text-align: center;
+}
+
+.featured-item {
+    width: 25%;
+    margin: 0 13pt 0 13pt;
+    border-radius: 2px;
+    display: inline-block;
+    /*    background-color: rgba(254, 254, 254, .85);*/
+}
+
+.featured-item img {
+    width: 100%;
+    height: auto;
+}
+
+#featured #shop-ref {
+    display: block;
+    font-weight: 700;
+    color: inherit;
+    text-decoration: none;
+    margin: 16pt;
+    margin-bottom: 8pt;
+}
+
+#art-logo {
+    height: auto;
+    width: 300px;
+    /*    position: absolute;*/
+    font-family: 'cocogoose';
+    font-size: 46pt;
+    letter-spacing: 3px;
+    /*    background-color: #000;*/
+    color: rgba(64, 64, 64, .9);
+    padding: 16pt;
+    padding-top: 30pt;
+    text-align: center;
+    border-radius: 3px;
+    margin-left: 40pt;
+    display: inline-block;
+}
+
+#art-logo div:nth-child(1) {
+    line-height: 32pt;
+    vertical-align: middle;
+    padding: 12pt 10pt 6pt 10pt;
+    border: solid 8px;
+    border-radius: 1px;
+    /*    visibility: hidden; */
+}
+
+#art #info {
+    display: inline-block;
+    width: 60%;
+    height: 100%;
+    padding: 24pt;
+    vertical-align: top;
+}
+
+#art #info p {
+    text-indent: 16pt;
+}
+
+#art #info a {
+    margin: 14pt;
+}
+
+footer {
+    display: block;
+    font-size: 10pt;
+}
+
+footer ul {
+    list-style: none;
+    list-style-position: inside;
+    margin: 0;
+    padding: 0;
+}
+
+footer .column {
+    width: 40%;
+    max-width: 140px;
+    /*    margin: 14pt 8pt 14pt 8pt;*/
+    margin: 8pt 14pt 8pt 14pt;
+    display: inline-block;
+    vertical-align: top;
+}
+
+
+/* MOBILE MEDIA SHIT */
+
+@media screen and (max-width: 750px) {
+    #logo a {
+        display: block;
+        margin: 0;
+        padding: 0;
+    }
+    nav {
+        padding-top: 34pt;
+    }
+    nav #expand {
+        text-decoration: none;
+        display: inherit;
+        font-size: 30pt;
+        font-weight: 800;
+        transition: transform .45s;
+    }
+    nav #expand:active,
+    nav #expand:hover {
+        text-decoration: none;
+    }
+    @keyframes expand-nav {
+        0% {
+            height: 0px;
+        }
+        100% {
+            height: 190px;
+        }
+    }
+    @keyframes close-nav {
+        0% {
+            height: 190px;
+        }
+        100% {
+            height: 0px;
+        }
+    }
+    nav ul {
+        display: none;
+        height: 0px;
+        overflow: none;
+    }
+    nav ul li {
+        display: block;
+        margin: 12pt 0 12pt 0;
+    }
 }
