--- a/css/styles.css
+++ b/css/styles.css
@@ -195,6 +195,10 @@ nav ul li a {
     margin-bottom: 8pt;
 }
 
+#art {
+    text-align: center;
+}
+
 #art-logo {
     height: auto;
     width: 300px;
@@ -202,7 +206,6 @@ nav ul li a {
     font-family: 'cocogoose';
     font-size: 46pt;
     letter-spacing: 3px;
-    /*    background-color: #000;*/
     color: rgba(64, 64, 64, .9);
     padding: 16pt;
     padding-top: 30pt;
@@ -237,6 +240,11 @@ nav ul li a {
     margin: 14pt;
 }
 
+#art #info #links {
+    float: right;
+    margin-top: 20pt;
+}
+
 footer {
     display: block;
     font-size: 10pt;
@@ -268,7 +276,7 @@ footer .column {
         padding: 0;
     }
     nav {
-        padding-top: 34pt;
+        /*        padding-top: 34pt;*/
     }
     nav #expand {
         text-decoration: none;
@@ -305,5 +313,34 @@ footer .column {
     nav ul li {
         display: block;
         margin: 12pt 0 12pt 0;
+    }
+    .panel.padded {
+        width: 98%;
+        padding: 1%;
+    }
+    .featured-item {
+        width: 80%;
+    }
+    #art-logo {
+        width: 80%;
+        font-size: 30pt;
+        margin: 0;
+        padding: 0;
+        margin-top: 34pt;
+    }
+    #art #info {
+        width: 90%;
+        margin: 0;
+        padding: 0;
+        text-align: justify;
+    }
+    #art #info p {}
+    #art #info #links {
+        float: none;
+        text-align: center;
+        margin: 0;
+    }
+    #art #info #links a {
+        display: block;
     }
 }
